[gd_scene load_steps=6 format=3 uid="uid://lrv2l1ulexqm"]

[ext_resource type="Script" uid="uid://bf0phf3lr760q" path="res://scenes/stations/work_station.gd" id="1_6nqr1"]
[ext_resource type="Texture2D" uid="uid://iwfxdy7ju7xa" path="res://assets/workstations/workstation_up.png" id="2_fm0ul"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fm0ul"]
size = Vector2(64, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jeb1n"]
size = Vector2(64, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ysy51"]
size = Vector2(64, 62)

[node name="WorkStation" type="Node2D"]
script = ExtResource("1_6nqr1")

[node name="Rotatable" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Rotatable"]
texture = ExtResource("2_fm0ul")

[node name="Content" type="Sprite2D" parent="Rotatable"]
visible = false
position = Vector2(0, -20)

[node name="Collision" type="StaticBody2D" parent="Rotatable"]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotatable/Collision"]
visible = false
position = Vector2(0, -12)
shape = SubResource("RectangleShape2D_fm0ul")

[node name="CollisionSmall" type="StaticBody2D" parent="Rotatable"]
visible = false
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotatable/CollisionSmall"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_jeb1n")
disabled = true

[node name="InteractionArea" type="Area2D" parent="Rotatable"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rotatable/InteractionArea"]
visible = false
shape = SubResource("RectangleShape2D_ysy51")

[connection signal="body_entered" from="Rotatable/InteractionArea" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="Rotatable/InteractionArea" to="." method="_on_interaction_area_body_exited"]
